[gd_scene load_steps=7 format=3 uid="uid://b8pb733udb6th"]

[ext_resource type="Script" path="res://resources/scripts/main_menu.gd" id="1_28flt"]
[ext_resource type="Texture2D" uid="uid://dm5c7r1rn2fgu" path="res://resources/Interface/Gemini_Generated_Image_db4m8qdb4m8qdb4m.png" id="2_1ehe0"]
[ext_resource type="FontFile" uid="uid://b51pl0hut3qm4" path="res://resources/Interface/Daydream.ttf" id="2_48xlc"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n45e2"]
content_margin_left = 30.0
content_margin_top = 30.0
content_margin_right = 30.0
content_margin_bottom = 30.0
bg_color = Color(0, 0, 0, 0.54902)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ce3w2"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
bg_color = Color(0, 0, 0, 0)

[sub_resource type="LabelSettings" id="LabelSettings_1ehe0"]
font = ExtResource("2_48xlc")
font_size = 40

[node name="mainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_28flt")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -7.99998
offset_top = -140.0
offset_right = -72.54
offset_bottom = -140.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.535, 1.535)
texture = ExtResource("2_1ehe0")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 477.0
offset_bottom = 652.0
theme_override_styles/panel = SubResource("StyleBoxFlat_n45e2")

[node name="conteinerNiveis" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -675.0
grow_horizontal = 0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_n45e2")

[node name="VBoxContainer" type="VBoxContainer" parent="conteinerNiveis"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 66.24
offset_top = -130.195
offset_right = 347.24
offset_bottom = 224.805
grow_vertical = 2
theme_override_constants/separation = 30
alignment = 1

[node name="btnNivel" type="Button" parent="conteinerNiveis/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.419608, 1, 0.752941, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_48xlc")
theme_override_font_sizes/font_size = 20
theme_override_styles/hover = SubResource("StyleBoxFlat_ce3w2")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ce3w2")
theme_override_styles/normal = SubResource("StyleBoxFlat_ce3w2")
text = "Nivel 1"
alignment = 0

[node name="btnNivel2" type="Button" parent="conteinerNiveis/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.419608, 1, 0.752941, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_48xlc")
theme_override_font_sizes/font_size = 20
theme_override_styles/hover = SubResource("StyleBoxFlat_ce3w2")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ce3w2")
theme_override_styles/normal = SubResource("StyleBoxFlat_ce3w2")
text = "Nivel 2"
alignment = 0

[node name="btnNivel3" type="Button" parent="conteinerNiveis/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.419608, 1, 0.752941, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_48xlc")
theme_override_font_sizes/font_size = 20
theme_override_styles/hover = SubResource("StyleBoxFlat_ce3w2")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ce3w2")
theme_override_styles/normal = SubResource("StyleBoxFlat_ce3w2")
text = "Nivel 3"
alignment = 0

[node name="btnNivel4" type="Button" parent="conteinerNiveis/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.419608, 1, 0.752941, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_48xlc")
theme_override_font_sizes/font_size = 20
theme_override_styles/hover = SubResource("StyleBoxFlat_ce3w2")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ce3w2")
theme_override_styles/normal = SubResource("StyleBoxFlat_ce3w2")
text = "Nivel 4"
alignment = 0

[node name="btnNivel5" type="Button" parent="conteinerNiveis/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.419608, 1, 0.752941, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_48xlc")
theme_override_font_sizes/font_size = 20
theme_override_styles/hover = SubResource("StyleBoxFlat_ce3w2")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ce3w2")
theme_override_styles/normal = SubResource("StyleBoxFlat_ce3w2")
text = "Nivel 5"
alignment = 0

[node name="Label" type="Label" parent="conteinerNiveis"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 54.71
offset_bottom = 107.71
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_48xlc")
theme_override_font_sizes/font_size = 40
text = "Escolher nivel"
horizontal_alignment = 1

[node name="menuContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 51.265
offset_right = 381.265
grow_vertical = 2
theme_override_constants/separation = 150
alignment = 1

[node name="Label" type="Label" parent="menuContainer"]
layout_mode = 2
text = "Sophia 64"
label_settings = SubResource("LabelSettings_1ehe0")

[node name="buttonContainer" type="VBoxContainer" parent="menuContainer"]
layout_mode = 2

[node name="btnComecar" type="Button" parent="menuContainer/buttonContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.419608, 1, 0.752941, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_48xlc")
theme_override_font_sizes/font_size = 20
theme_override_styles/hover = SubResource("StyleBoxFlat_ce3w2")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ce3w2")
theme_override_styles/normal = SubResource("StyleBoxFlat_ce3w2")
text = "Iniciar jogo"
alignment = 0

[node name="btnEscolher" type="Button" parent="menuContainer/buttonContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.419608, 1, 0.752941, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_48xlc")
theme_override_font_sizes/font_size = 20
theme_override_styles/hover = SubResource("StyleBoxFlat_ce3w2")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ce3w2")
theme_override_styles/normal = SubResource("StyleBoxFlat_ce3w2")
text = "Escolher nivel"
alignment = 0

[node name="btnSair" type="Button" parent="menuContainer/buttonContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.419608, 1, 0.752941, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_48xlc")
theme_override_font_sizes/font_size = 20
theme_override_styles/hover = SubResource("StyleBoxFlat_ce3w2")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ce3w2")
theme_override_styles/normal = SubResource("StyleBoxFlat_ce3w2")
text = "Sair do Jogo"
alignment = 0

[connection signal="pressed" from="menuContainer/buttonContainer/btnComecar" to="." method="_on_btn_comecar_pressed"]
[connection signal="pressed" from="menuContainer/buttonContainer/btnEscolher" to="." method="_on_btn_escolher_pressed"]
[connection signal="pressed" from="menuContainer/buttonContainer/btnSair" to="." method="_on_btn_sair_pressed"]
